--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -123,5 +123,17 @@
     </mat-card-content>
   </mat-card>
 
+  <mat-card>
+    <mat-card-title>Compact variants</mat-card-title>
+    <mat-card-content>
+      <button mat-button color="primary" compact><mat-icon>coffee</mat-icon> Primary</button>
+      <button mat-raised-button color="accent" compact><mat-icon>coffee</mat-icon> Accent</button>
+      <button mat-stroked-button color="caution" compact><mat-icon>coffee</mat-icon> Caution</button>
+      <button mat-flat-button color="info" compact><mat-icon>coffee</mat-icon> Info</button>
+      <button mat-icon-button color="success" compact><mat-icon>coffee</mat-icon></button>
+      <button mat-mini-fab color="warn" compact><mat-icon>coffee</mat-icon></button>
+    </mat-card-content>
+  </mat-card>
+
 
 </section>
