Add mat-men compact density

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -55,4 +55,28 @@
     </mat-card-content>
   </mat-card>
 
+  <mat-card>
+    <mat-card-title>Compact</mat-card-title>
+    <mat-card-content>
+
+      <button mat-flat-button color="success" [matMenuTriggerFor]="menu3" compact>Open compact menu <mat-icon>expand_more</mat-icon></button>
+
+      <mat-menu #menu3="matMenu" xPosition="before">
+        <button mat-menu-item compact>
+          <mat-icon>dialpad</mat-icon>
+          <span>Redial</span>
+        </button>
+        <button mat-menu-item compact disabled>
+          <mat-icon>voicemail</mat-icon>
+          <span>Check voice mail</span>
+        </button>
+        <button mat-menu-item compact>
+          <mat-icon>notifications_off</mat-icon>
+          <span>Disable alerts</span>
+        </button>
+      </mat-menu>
+
+    </mat-card-content>
+  </mat-card>
+
 </section>
