--- a/src/themes/_material/_mat-menu.scss
+++ b/src/themes/_material/_mat-menu.scss
@@ -13,7 +13,10 @@
 @mixin density($theme) {
 
   $dense-size: 40px;
-  $dense-icon-size: 20px;
+  $dense-icon-size: 24px;
+
+  $compact-size: 32px;
+  $compact-icon-size: 20px;
 
   // remove top/bottom paddings
   .mat-menu-content:not(:empty) {
@@ -29,6 +32,17 @@
       width: $dense-icon-size;
       font-size: $dense-icon-size;
       line-height: $dense-icon-size;
+    }
+  }
+
+  .mat-menu-item[compact] {
+    height: $compact-size;
+    line-height: $compact-size;
+    .mat-icon {
+      height: $compact-icon-size;
+      width: $compact-icon-size;
+      font-size: $compact-icon-size;
+      line-height: $compact-icon-size;
     }
   }
 
