Fix legacy mat-form field density

--- a/src/themes/_material/_mat-form-field.scss
+++ b/src/themes/_material/_mat-form-field.scss
@@ -106,7 +106,7 @@
 
   // legacy
   &.mat-form-field-appearance-legacy {
-    .mat-form-field-label {
+    .mat-form-field-label span {
       font-size: $base-input-font-size;
     }
   }
