Fix arc-theme tooltip colors

--- a/src/themes/arc/arc-dark.theme.scss
+++ b/src/themes/arc/arc-dark.theme.scss
@@ -54,7 +54,7 @@ $theme-background: (
   hover:                    $light-bg-alpha-4,
   card:                     $dark-bg-lighter-5,
   dialog:                   $dark-bg-lighter-5,
-  tooltip:                  $dark-bg-lighter-20,
+  tooltip:                  rgba(0,0,0,.48),
   disabled-button:          $light-bg-alpha-12,
   raised-button:            $dark-bg-lighter-5,
   focused-button:           $light-focused,
