--- a/src/themes/arc/arc-light.theme.scss
+++ b/src/themes/arc/arc-light.theme.scss
@@ -58,7 +58,7 @@ $theme-background: (
   hover:                    $dark-bg-alpha-4,
   card:                     $light-bg-lighter-5,
   dialog:                   $light-bg-lighter-5,
-  tooltip:                  $dark-bg-tooltip,
+  tooltip:                  rgba(0,0,0,.48),
   disabled-button:          $dark-bg-alpha-12,
   raised-button:            $light-bg-lighter-5,
   focused-button:           $dark-focused,
@@ -114,4 +114,5 @@ $theme: (
   a:not(.mat-button, .mat-list-item):visited {
     color: map.get($theme-primary, default);
   }
+
 }
