Fix placeholder letters spacing

--- a/src/app/form-field/form-field.component.html
+++ b/src/app/form-field/form-field.component.html
@@ -54,7 +54,7 @@
     <mat-card-content>
       <mat-form-field [appearance]="$any(a)" dense hide-subscript>
         <mat-label>Default input</mat-label>
-        <input matInput>
+        <input matInput placeholder="Default input">
         <mat-icon matPrefix>shopping_cart</mat-icon>
         <mat-icon matSuffix>done</mat-icon>
       </mat-form-field>
