--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -57,37 +57,59 @@
     <mat-card-title>Tab dense variant</mat-card-title>
     <mat-card-content>
 
-      <mat-tab-group color="primary" dense>
-        <mat-tab label="First"></mat-tab>
-        <mat-tab label="Second"></mat-tab>
-        <mat-tab label="Third"></mat-tab>
+      <mat-tab-group color="primary" backgroundColor="primary" dense>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>thumb_up</mat-icon>
+            First
+          </ng-template>
+          First content...
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>verified</mat-icon>
+            Second
+          </ng-template>
+          Second content...
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>done</mat-icon>
+            Third
+          </ng-template>
+          Third content...
+        </mat-tab>
       </mat-tab-group>
-
-      <mat-tab-group color="info" [backgroundColor]="$any('info')" dense>
-        <mat-tab label="First"></mat-tab>
-        <mat-tab label="Second"></mat-tab>
-        <mat-tab label="Third"></mat-tab>
-      </mat-tab-group>
-
-      <div>
-        <nav mat-tab-nav-bar color="success" [attr.color]="'success'" [tabPanel]="tabPanel3" dense>
-          <a mat-tab-link *ngFor="let link of links"
-             (click)="activeLink = link"
-             [active]="activeLink == link"> {{ link}} </a>
-        </nav>
-        <mat-tab-nav-panel #tabPanel3></mat-tab-nav-panel>
-      </div>
-
-      <div>
-        <nav mat-tab-nav-bar color="caution" [backgroundColor]="$any('caution')" [attr.color]="'caution'" [tabPanel]="tabPanel4" dense>
-          <a mat-tab-link *ngFor="let link of links"
-             (click)="activeLink = link"
-             [active]="activeLink == link"> {{ link }} </a>
-        </nav>
-        <mat-tab-nav-panel #tabPanel4></mat-tab-nav-panel>
-      </div>
 
     </mat-card-content>
+
+    <mat-divider></mat-divider>
+    <mat-card-subtitle>Compact</mat-card-subtitle>
+    <mat-card-content>
+
+      <mat-tab-group color="primary" backgroundColor="primary" compact>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>thumb_up</mat-icon>
+            First
+          </ng-template>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>verified</mat-icon>
+            Second
+          </ng-template>
+        </mat-tab>
+        <mat-tab>
+          <ng-template mat-tab-label>
+            <mat-icon>done</mat-icon>
+            Third
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
+
+    </mat-card-content>
+
   </mat-card>
 
 </section>
