--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -6,7 +6,7 @@
 
   section {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 24px;
 
     > * {
