Add toolbar compact size

--- a/src/themes/_material/_mat-toolbar.scss
+++ b/src/themes/_material/_mat-toolbar.scss
@@ -32,6 +32,11 @@
 
   .mat-toolbar-row[dense],
   .mat-toolbar-single-row[dense] {
+    height: 56px;
+  }
+
+  .mat-toolbar-row[compact],
+  .mat-toolbar-single-row[compact] {
     height: 48px;
   }
 
