Add source code links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,13 @@
   <mat-sidenav mode="side" [opened]="leftMenuOpened" class="left-menu">
 
     <mat-nav-list>
+
+      <div mat-subheader>Custom Components</div>
+
+      <mat-divider></mat-divider>
+
+      <div mat-subheader>Angular Material Components</div>
+
       <a mat-list-item matLine [routerLink]="['badge']">Badge</a>
       <a mat-list-item matLine [routerLink]="['button']">Button</a>
       <a mat-list-item matLine [routerLink]="['button-toggle']">Button toggle</a>
