--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,8 @@
 <h2 class="title">Card</h2>
 
 <div>
-  See Angular's Material's <a color="primary" href="https://material.angular.io/components/card/overview"
-                              target="_blank">Card component</a>.
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/card/overview" target="_blank">Card component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/card" target="_blank">source code</a>.
 </div>
 
 <section>
