--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -1,8 +1,8 @@
 <h2 class="title">Checkbox</h2>
 
 <div>
-  See Angular's Material's <a color="primary" href="https://material.angular.io/components/checkbox/overview"
-                              target="_blank">Checkbox component</a>.
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/checkbox/overview" target="_blank">Checkbox component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/checkbox" target="_blank">source code</a>.
 </div>
 
 <section>
