--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/dialog/tooltip/overview"
-                              target="_blank">Dialog component</a>.
+                              target="_blank">Dialog component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/dialog" target="_blank">source code</a>.
 </div>
 
 <section>
