--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/list/overview"
-                              target="_blank">List component</a>.
+                              target="_blank">List component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/list" target="_blank">source code</a>.
 </div>
 
 <section>
