--- a/src/app/paginator/paginator.component.html
+++ b/src/app/paginator/paginator.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/paginator/overview"
-                              target="_blank">Paginator component</a>.
+                              target="_blank">Paginator component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/paginator" target="_blank">source code</a>.
 </div>
 
 <section>
