--- a/src/app/progress-bar/progress-bar.component.html
+++ b/src/app/progress-bar/progress-bar.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/progress-bar/overview"
-                              target="_blank">Progress bar component</a>.
+                              target="_blank">Progress bar component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/progress-bar" target="_blank">source code</a>.
 </div>
 
 <section>
