--- a/src/app/radio-button/radio-button.component.html
+++ b/src/app/radio-button/radio-button.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/radio/overview"
-                              target="_blank">Radio button component</a>.
+                              target="_blank">Radio button component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/radio" target="_blank">source code</a>.
 </div>
 
 <section>
