--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/toolbar/overview"
-                              target="_blank">Toolbar component</a>.
+                              target="_blank">Toolbar component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/toolbar" target="_blank">source code</a>.
 </div>
 
 
@@ -40,5 +41,52 @@
 
     </mat-card-content>
   </mat-card>
+
+  <mat-card>
+    <mat-card-title>Toolbar Sizes</mat-card-title>
+    <mat-card-content>
+
+      <mat-toolbar color="primary">
+        <button mat-icon-button>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Default</span>
+        <button mat-icon-button>
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button>
+          <mat-icon>share</mat-icon>
+        </button>
+      </mat-toolbar>
+
+      <mat-toolbar color="primary" dense>
+        <button mat-icon-button>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Dense</span>
+        <button mat-icon-button>
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button>
+          <mat-icon>share</mat-icon>
+        </button>
+      </mat-toolbar>
+
+      <mat-toolbar color="primary" compact>
+        <button mat-icon-button>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Compact</span>
+        <button mat-icon-button>
+          <mat-icon>favorite</mat-icon>
+        </button>
+        <button mat-icon-button>
+          <mat-icon>share</mat-icon>
+        </button>
+      </mat-toolbar>
+
+    </mat-card-content>
+  </mat-card>
+
 
 </section>
