--- a/src/app/tooltip/tooltip.component.html
+++ b/src/app/tooltip/tooltip.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/tooltip/overview"
-                              target="_blank">Tooltip component</a>.
+                              target="_blank">Tooltip component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/tooltip" target="_blank">source code</a>.
 </div>
 
 <section>
