--- a/src/app/button-toggle/button-toggle.component.html
+++ b/src/app/button-toggle/button-toggle.component.html
@@ -1,7 +1,8 @@
 <h2 class="title">Button Toggle</h2>
 
 <div>
-  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button-toggle/overview" target="_blank">Button toggle component</a>.
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button-toggle/overview" target="_blank">Button toggle component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/button-toggle" target="_blank">source code</a>.
 </div>
 
 
