--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,7 +1,8 @@
 <h2 class="title">Button</h2>
 
 <div>
-  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button/overview" target="_blank">Button component</a>.
+  See Angular's Material's <a color="primary" href="https://material.angular.io/components/button/overview" target="_blank">Button component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/button" target="_blank">source code</a>.
 </div>
 
 <section>
