--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/menu/overview"
-                              target="_blank">Menu component</a>.
+                              target="_blank">Menu component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/menu" target="_blank">source code</a>.
 </div>
 
 <section>
