--- a/src/app/slide-toggle/slide-toggle.component.html
+++ b/src/app/slide-toggle/slide-toggle.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/slide-toggle/overview"
-                              target="_blank">Slide toggle component</a>.
+                              target="_blank">Slide toggle component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/slide-toggle" target="_blank">source code</a>.
 </div>
 
 <section>
