--- a/src/app/snackbar/snackbar.component.html
+++ b/src/app/snackbar/snackbar.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/snack-bar/overview"
-                              target="_blank">Snackbar component</a>.
+                              target="_blank">Snackbar component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/snack-bar" target="_blank">source code</a>.
 </div>
 
 <section>
