--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -2,7 +2,8 @@
 
 <div>
   See Angular's Material's <a color="primary" href="https://material.angular.io/components/table/overview"
-                              target="_blank">Table component</a>.
+                              target="_blank">Table component</a> and
+  <a href="https://github.com/angular/components/tree/main/src/material/table" target="_blank">source code</a>.
 </div>
 
 
